Release v1.86 stateful scanning and analyzer hardening